# cnb-cli

./: .gitignore  Cargo.toml  SPEC.md  document.json  flake.nix
.github/workflows/: ci.yml
src/: client.rs  config.rs  main.rs  output.rs  pagination.rs
src/cmd/: build.rs  issue.rs  mod.rs  pr.rs  repo.rs  user.rs
