[package]
name = "cnb-cli"
version = "0.1.0"
edition = "2024"
description = "CNB API command line interface"
license = "MIT"

[dependencies]
clap = { version = "4", features = ["derive", "env"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
anyhow = "1"
dirs = "5"
